add cdc with kafka CustomDebeziumJsonDeserializationSchema example